# james

./: .gitignore  Accept-Terms.bat  BUILD.bat  CYBERCAT-INFOGRAPHIC-GUIDE.md  DEPLOYMENT-GUIDE.md  DIAGNOSTIC-REPORT.md  INSTALL.bat  INSTALLATION_GUIDE.md  JAMES-THE-CYBERCAT-ARCHITECTURE.md  JAMES-VS-CYBERCAT-COMPARISON.md  LICENSE  README.md  SECURITY-AUDIT-AND-DEBUG-REPORT.md  SECURITY-AUDIT.md  SECURITY.md  SETUP_COMPLETION_GUIDE.md  STANDALONES-GUIDE.md  START-CYBERCAT.bat  TERMS-AND-CONDITIONS.txt  TYPESCRIPT-CONVERSION-COMPLETE.md  TYPESCRIPT-CONVERSION-STATUS.md  TYPESCRIPT-MIGRATION-COMPLETE.md  add-digital-ocean-token.bat  check-and-setup.bat  configure-api-keys.bat  fix-git.bat  install.sh  setup-do-token.bat  setup_mcp_server.py  test-sync.txt  vscode-mcp-config.json
api-hub/: README.md  package.json  server.js  tsconfig.json
cybercat-mcp/: README.md  index.js  package-lock.json  package.json
cybercat-scanner/: .gitignore  README.md  build.bat  create-exe.bat  cybercat.bat  package.json  pom.xml  run-scanner.bat  scanner.js  tsconfig.json
cybercat-standalone/: LICENSE-PURCHASE.md  README.md  build-exe.bat  cybercat.js  license-service.js  notification-manager.js  package-lock.json  package.json  run-cybercat.bat  settings-service.js  tsconfig.json  types.js
digitalocean-mcp/: .env.example  README.md  index.js  package-lock.json  package.json
docs/: digital-ocean-setup-guide.md  get-digital-ocean-token.md  node-installation-guide.md
emersa-gui/: README.md  package-lock.json  package.json  server.js  tsconfig.json
james-ultimate/cpp-scanner/: CMakeLists.txt
james-ultimate/cpp-scanner/src/: network_scanner.cpp  traffic_analyzer.cpp
james-ultimate/rust-crypto/: Cargo.toml
james-ultimate/rust-crypto/src/: lib.rs
security/: README.md  (+3 more)
(+157 files in other folders)
