[package]
name = "james-crypto"
version = "2.0.0"
edition = "2021"
authors = ["Emersa Ltd."]
description = "High-performance cryptography module for James Ultimate"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cryptography
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
md5 = "0.7"
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
napi = { version = "2", features = ["napi8", "async"] }
napi-derive = "2"

# Performance
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true